# build_club_mcp

./: .gitignore  Dockerfile  README.md  hosting_mcp_server.ipynb  presentation.html  presentation.md  pyproject.toml  references.md  runtime_with_strands_and_bedrock_models.ipynb
notebooks/: hosting_mcp_server.ipynb  hosting_mcp_server_iam_auth.ipynb  runtime_with_strands_and_bedrock_models.ipynb  strands_claude.py
